(lang dune 3.17)

(name parser)

(generate_opam_files true)

(source
 (github akshay-97/jsonParser))

(authors "kaeshk <adiosphobian@gmail.com>")


(license LICENSE)


(package
 (name parser)
 (synopsis "json parser")
 (description "add and combine your parsers")
 (depends ocaml)
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
